--- a/app/books/webapp/i18n/i18n.properties
+++ b/app/books/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=books information
+appTitle=Books Info
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
